2005-07-12  Angus Leeming  <leeming@lyx.org>

	* qt.m4 (QT_CHECK_IS_MULTITHREADED): ascertain whether the Qt library
	has multi-threading support.

2005-07-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* qt.m4 (QT_DO_IT_ALL): mark the QTDIR variable as precious.

2005-05-04  Angus Leeming  <leeming@lyx.org>

	* common.am (*.o *.lo *.obj): make the TARGETS depend on $(PCH_FILE),
	not the SOURCES.
	(pch-file): name the generated .pch.h.gch file explicitly.
	Enables the file to be output to the build directory if different
	to the source directory.
	(DISTCLEANFILES): add pch.h.gch.dep

2005-05-03  Angus Leeming  <leeming@lyx.org>

	* Makefile.am: remove [ap]spell.m4 and add spell.m4.

2005-05-02  Angus Leeming  <leeming@lyx.org>

	* spell.m4: test for something that MSVC doesn't have (fork)
	as opposed to something it does (select, dup2).

2005-05-02  Angus Leeming  <leeming@lyx.org>

	* aspell.m4, pspell.m4: removed.
	* spell.m4: new. Incorporates the code in [ap]spell but also adds
	a test for whether the ISpell-handling code should be compiled.

2005-04-22  Angus Leeming  <leeming@lyx.org>

	* qt.m4: Move the Qt-specific preprocessor flags out of the
	various Makefile.am files to here. Specialise the flags for mingw.

2005-02-17  Michael Schmitt  <michael.schmitt@teststep.org>

	* qt.m4: detect Qt Win/Free library

2005-02-03  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lyxinclude.m4 (LYX_USE_PACKAGING): remove single quotes around
	prefix in the windows case; set libdir correctly.

2005-01-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* common.am (pch-file): new target, used recursively by target
	$(PCH_FILE). This avoids bash-isms.

2005-01-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lyxinclude.m4: fix default win32 prefix

2005-01-06  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lyxinclude.m4 (LYX_USE_PACKAGING): new macro.

2005-01-05  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* lyxinclude.m4 (enable_stdlib_debug): new switch