@@ -1,3 +1,7 @@
+2005-07-15    <lgb@tandberg.net>
+
+	* lyxinclude.m4 (lyx_pch_comp): add profiling switch
+
 2005-07-12  Angus Leeming  <leeming@lyx.org>
 
 	* qt.m4 (QT_CHECK_IS_MULTITHREADED): ascertain whether the Qt library
